--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,3 @@
-/* Custom properties/variables  */
-:root {
-  --main-white: #f0f0f0;
-  --main-red: #be3144;
-  --main-blue: #45567d;
-  --main-gray: #303841;
-}
-
-/* Base reset */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-/* box-sizing and font sizing */
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 html {
   box-sizing: border-box;
 
@@ -65,15 +44,18 @@ html {
     font-size: 55%;
   }
 }
-
 /* Base styles */
 
 body {
+  background: #903749;
   font-family: "Poppins", sans-serif;
   font-size: 1.8rem; /* 18px */
-  font-weight: 400;
   line-height: 1.4;
-  color: var(--main-white);
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0;
 }
 
 h1,
@@ -81,6 +63,10 @@ h2 {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   text-align: center;
+}
+
+p {
+  color: #f1e8e8;
 }
 
 h1 {
@@ -97,26 +83,25 @@ ul {
 
 a {
   text-decoration: none;
-  color: var(--main-white);
 }
 
 img {
   display: block;
-  width: 100%;
+  width: 80%;
 }
 
 /* nav */
 
-.nav {
+nav {
+  background: #903749;
   display: flex;
   justify-content: flex-end;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  background: var(--main-red);
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
-  z-index: 10;
+  z-index: 1;
 }
 
 .nav-list {
@@ -125,7 +110,7 @@ img {
 }
 
 @media (max-width: 28.75em) {
-  .nav {
+  nav {
     justify-content: center;
   }
 
@@ -135,33 +120,34 @@ img {
 }
 
 .nav-list a {
+  color: #2b2e4a;
   display: block;
   font-size: 2.2rem;
+  font-weight: bold;
   padding: 2rem;
 }
 
 .nav-list a:hover {
-  background: var(--main-blue);
+  color: #e84545;
 }
 
 /* Welcome section */
 
-.welcome-section {
+#welcome-section {
+  color: #903749;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: #000;
-  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+  background-color: #2b2e4a;
 }
 
 .welcome-section > p {
   font-size: 3rem;
   font-weight: 200;
   font-style: italic;
-  color: var(--main-red);
 }
 
 /* Projects section */
@@ -169,13 +155,13 @@ img {
 .projects-section {
   text-align: center;
   padding: 10rem 2rem;
-  background: var(--main-blue);
+  background: #903749;
 }
 
 .projects-section-header {
   max-width: 640px;
   margin: 0 auto 6rem auto;
-  border-bottom: 0.2rem solid var(--main-white);
+  border-bottom: 0.2rem solid #2b2e4a;
 }
 
 @media (max-width: 28.75em) {
@@ -205,14 +191,8 @@ img {
   }
 }
 
-.project {
-  background: var(--main-gray);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 2px;
-}
-
 .code {
-  color: var(--main-gray);
+  color: #f1e8e8;
   transition: color 0.3s ease-out;
 }
 
@@ -227,7 +207,8 @@ img {
 }
 
 .project-title {
-  font-size: 2rem;
+  background: #903749;
+  font-size: 1.8rem;
   padding: 2rem 0.5rem;
 }
 
@@ -239,12 +220,12 @@ img {
 
 .btn-show-all {
   font-size: 2rem;
-  background: var(--main-gray);
+  background: #903749;
   transition: background 0.3s ease-out;
 }
 
 .btn-show-all:hover {
-  background: var(--main-red);
+  background: #903749;
 }
 
 .btn-show-all:hover > i {
@@ -260,6 +241,7 @@ img {
 /* Contact section */
 
 .contact-section {
+  color: #f1e8e8;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -268,7 +250,7 @@ img {
   width: 100%;
   height: 80vh;
   padding: 0 2rem;
-  background: var(--main-gray);
+  background: #2b2e4a;
 }
 
 .contact-section-header > h2 {
@@ -295,8 +277,10 @@ img {
 }
 
 .contact-details {
+  color: #f1e8e8;
+  background: #903749;
   font-size: 2.4rem;
-  text-shadow: 2px 2px 1px #1f1f1f;
+
   transition: transform 0.3s ease-out;
 }
 
@@ -307,20 +291,27 @@ img {
 /* Footer */
 
 footer {
+  color: #f1e8e8;
   font-weight: 300;
   display: flex;
   justify-content: space-evenly;
   padding: 2rem;
-  background: var(--main-gray);
-  border-top: 4px solid var(--main-red);
+  background: #903749;
+  border-top: 4px solid #f1e8e8;
+}
+
+footer a {
+  color: #f1e8e8;
+  font-weight: bold;
+}
+
+footer a:hover {
+  color: #2b2e4a;
+  font-weight: bold;
 }
 
 footer > p {
   margin: 2rem;
-}
-
-footer i {
-  vertical-align: middle;
 }
 
 @media (max-width: 28.75em) {
