--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ img {
 /* nav */
 
 nav {
-  background: #903749;
+  background: #f1e8e8;
   display: flex;
   justify-content: flex-end;
   position: fixed;
@@ -122,7 +122,7 @@ nav {
 }
 
 .nav-list a {
-  color: #2b2e4a;
+  color: #e84545;
   display: block;
   font-size: 2.2rem;
   font-weight: bold;
@@ -130,7 +130,7 @@ nav {
 }
 
 .nav-list a:hover {
-  color: #e84545;
+  color: #2b2e4a;
 }
 
 /* Welcome section */
