--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
+/* box-sizing and font sizing */
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 html {
   box-sizing: border-box;
-
   /* Set font size for easy rem calculations
    * default document font size = 16px, 1rem = 16px, 100% = 16px
    * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
@@ -23,31 +29,7 @@ html {
  * As an example: a breakpoint at 980px
  * 980px / 16px = 61.25em
 */
-
-/* 1200px / 16px = 75em */
-@media (max-width: 75em) {
-  html {
-    font-size: 60%;
-  }
-}
-
-/* 980px / 16px = 61.25em */
-@media (max-width: 61.25em) {
-  html {
-    font-size: 58%;
-  }
-}
-
-/* 460px / 16px = 28.75em */
-@media (max-width: 28.75em) {
-  html {
-    font-size: 55%;
-  }
-}
-/* Base styles */
-
 body {
-  background: #903749;
   font-family: "Poppins", sans-serif;
   font-size: 1.8rem; /* 18px */
   line-height: 1.4;
@@ -60,23 +42,20 @@ body {
 
 h1,
 h2 {
+  color: #ccffbd;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   text-align: center;
 }
 
-p {
-  color: #f1e8e8;
-}
-
 h1 {
-  color: #e84545;
+  color: #ccffbd;
   font-size: 6rem;
 }
 
 h2 {
+  color: #7eca9c;
   font-size: 4rem;
-  color: #f1e8e8;
 }
 
 ul {
@@ -89,13 +68,13 @@ a {
 
 img {
   display: block;
-  width: 80%;
+  width: 100%;
 }
 
 /* nav */
 
 nav {
-  background: #f1e8e8;
+  background: #ccffbd;
   display: flex;
   justify-content: flex-end;
   position: fixed;
@@ -103,7 +82,7 @@ nav {
   left: 0;
   width: 100%;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
-  z-index: 1;
+  z-index: 10;
 }
 
 .nav-list {
@@ -111,18 +90,8 @@ nav {
   margin-right: 2rem;
 }
 
-@media (max-width: 28.75em) {
-  nav {
-    justify-content: center;
-  }
-
-  .nav-list {
-    margin: 0 1rem;
-  }
-}
-
 .nav-list a {
-  color: #e84545;
+  color: #1c1427;
   display: block;
   font-size: 2.2rem;
   font-weight: bold;
@@ -130,23 +99,22 @@ nav {
 }
 
 .nav-list a:hover {
-  color: #2b2e4a;
+  color: #7eca9c;
 }
 
 /* Welcome section */
 
-#welcome-section {
-  color: #903749;
+.welcome-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
   height: 100vh;
-  background-color: #2b2e4a;
+  background-color: #1c1427;
 }
 
 .welcome-section > p {
+  color: #7eca9c;
   font-size: 3rem;
   font-weight: 200;
   font-style: italic;
@@ -155,15 +123,18 @@ nav {
 /* Projects section */
 
 .projects-section {
+  
   text-align: center;
   padding: 10rem 2rem;
-  background: #903749;
+  background: #7eca9c;
 }
 
 .projects-section-header {
   max-width: 640px;
-  margin: 0 auto 6rem auto;
-  border-bottom: 0.2rem solid #2b2e4a;
+  margin: 0 auto 5rem auto;
+  color: #1c1427;
+  font-size: 4rem;
+  font-weight: bold;
 }
 
 @media (max-width: 28.75em) {
@@ -193,11 +164,6 @@ nav {
   }
 }
 
-.code {
-  color: #f1e8e8;
-  transition: color 0.3s ease-out;
-}
-
 .project-image {
   height: calc(100% - 6.8rem);
   width: 100%;
@@ -205,7 +171,7 @@ nav {
 }
 
 .project-title {
-  background: #903749;
+  background: #ccffbd;
   font-size: 1.8rem;
   padding: 2rem 0.5rem;
 }
@@ -218,12 +184,12 @@ nav {
 
 .btn-show-all {
   font-size: 2rem;
-  background: #903749;
+  background: #ccffbd;
   transition: background 0.3s ease-out;
 }
 
 .btn-show-all:hover {
-  background: #903749;
+  background: #ccffbd;
 }
 
 .btn-show-all:hover > i {
@@ -239,7 +205,7 @@ nav {
 /* Contact section */
 
 .contact-section {
-  color: #f1e8e8;
+  color: #ccffbd;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -275,8 +241,9 @@ nav {
 }
 
 .contact-details {
-  color: #f1e8e8;
-  background: #903749;
+  border: 1px solid #1c1427;
+  color:#1c1427;
+  background: #ccffbd;
   font-size: 2.4rem;
 
   transition: transform 0.3s ease-out;
@@ -289,22 +256,22 @@ nav {
 /* Footer */
 
 footer {
-  color: #f1e8e8;
+  color: #1c1427;
   font-weight: 300;
   display: flex;
   justify-content: space-evenly;
   padding: 2rem;
-  background: #903749;
+  background: #ccffbd;
   border-top: 4px solid #f1e8e8;
 }
 
 footer a {
-  color: #f1e8e8;
+  color: #1c1427;
   font-weight: bold;
 }
 
 footer a:hover {
-  color: #2b2e4a;
+  color: #7eca9c;
   font-weight: bold;
 }
 
@@ -316,5 +283,37 @@ footer > p {
   footer {
     flex-direction: column;
     text-align: center;
+  }
+}
+
+/* 1200px / 16px = 75em */
+@media (max-width: 75em) {
+  html {
+    font-size: 60%;
+  }
+}
+
+/* 980px / 16px = 61.25em */
+@media (max-width: 61.25em) {
+  html {
+    font-size: 58%;
+  }
+}
+
+/* 460px / 16px = 28.75em */
+@media (max-width: 28.75em) {
+  html {
+    font-size: 55%;
+  }
+}
+/* Base styles */
+
+@media (max-width: 28.75em) {
+  nav {
+    justify-content: center;
+  }
+
+  .nav-list {
+    margin: 0 1rem;
   }
 }
