--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-/* box-sizing and font sizing */
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 html {
   box-sizing: border-box;
   /* Set font size for easy rem calculations
@@ -81,8 +74,6 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
-  z-index: 10;
 }
 
 .nav-list {
@@ -318,6 +309,10 @@ footer > p {
   }
 
   .nav-list {
-    margin: 0 1rem;
+    margin: 0 auto;
+  }
+
+  .welcome-section > p {
+    font-size: 2.5rem;
   }
 }
