--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,13 @@
 html {
   box-sizing: border-box;
-  /* Set font size for easy rem calculations
-   * default document font size = 16px, 1rem = 16px, 100% = 16px
-   * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-  */
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
-/* A few media query to set some font sizes at different screen sizes.
- * This helps automate a bit of responsiveness.
- * The trick is to use the rem unit for size values, margin and padding.
- * Because rem is relative to the document font size
- * when we scale up or down the font size on the document
- * it will affect all properties using rem units for the values.
-*/
-
-/* I am using the em unit for breakpoints
- * The calculation is the following
- * screen size divided by browser base font size
- * As an example: a breakpoint at 980px
- * 980px / 16px = 61.25em
-*/
 body {
   font-family: "Poppins", sans-serif;
   font-size: 1.8rem; /* 18px */
-  line-height: 1.4;
+  line-height: 2;
 }
 
 .container {
@@ -42,12 +24,10 @@ h2 {
 }
 
 h1 {
-  color: #ccffbd;
   font-size: 6rem;
 }
 
 h2 {
-  color: #7eca9c;
   font-size: 4rem;
 }
 
@@ -56,7 +36,13 @@ ul {
 }
 
 a {
+  color: #1c1427;
   text-decoration: none;
+  font-weight: 700;
+}
+
+a:hover {
+  color: #7eca9c;
 }
 
 img {
@@ -68,12 +54,14 @@ img {
 
 nav {
   background: #ccffbd;
+  border-bottom: 1px solid #2b2e4a;
   display: flex;
   justify-content: flex-end;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .nav-list {
@@ -84,13 +72,9 @@ nav {
 .nav-list a {
   color: #1c1427;
   display: block;
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   font-weight: bold;
   padding: 2rem;
-}
-
-.nav-list a:hover {
-  color: #7eca9c;
 }
 
 /* Welcome section */
@@ -102,10 +86,9 @@ nav {
   align-items: center;
   height: 100vh;
   background-color: #1c1427;
-  line-height: 3;
 }
 
-.welcome-section > p {
+.subheading-p {
   color: #7eca9c;
   font-size: 3rem;
   font-weight: 200;
@@ -164,6 +147,7 @@ nav {
 .project-title {
   background: #ccffbd;
   font-size: 1.8rem;
+  font-weight: 700;
   padding: 2rem 0.5rem;
 }
 
@@ -176,11 +160,11 @@ nav {
 .btn-show-all {
   font-size: 2rem;
   background: #ccffbd;
-  transition: background 0.3s ease-out;
 }
 
 .btn-show-all:hover {
-  background: #ccffbd;
+  background: #7eca9c;
+  border: 1px solid #1c1427;
 }
 
 .btn-show-all:hover > i {
@@ -196,6 +180,7 @@ nav {
 /* Contact section */
 
 .contact-section {
+  background: #1c1427;
   color: #ccffbd;
   display: flex;
   flex-direction: column;
@@ -205,7 +190,6 @@ nav {
   width: 100%;
   height: 80vh;
   padding: 0 2rem;
-  background: #2b2e4a;
 }
 
 .contact-section-header > h2 {
@@ -257,21 +241,7 @@ footer {
   justify-content: space-evenly;
   padding: 2rem;
   background: #ccffbd;
-  border-top: 4px solid #f1e8e8;
-}
-
-footer a {
-  color: #1c1427;
-  font-weight: bold;
-}
-
-footer a:hover {
-  color: #7eca9c;
-  font-weight: bold;
-}
-
-footer > p {
-  margin: 2rem;
+  border-top: 1px solid #2b2e4a;
 }
 
 @media (max-width: 28.75em) {
