--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   font-size: 1.8rem; /* 18px */
-  line-height: 2;
+  line-height: 1.5;
 }
 
 .container {
@@ -198,7 +198,13 @@ nav {
 
 .contact-section-header > p {
   font-size: 3rem;
+  padding: 25px 0 0 0;
 }
+
+.fa-slack-hash {
+  padding: 15px 0;
+}
+
 
 @media (max-width: 28.75em) {
   .contact-section-header > h2 {
