--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ nav {
   align-items: center;
   text-align: center;
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   padding: 0 2rem;
 }
 
@@ -228,7 +228,7 @@ nav {
   border: 1px solid #1c1427;
   color: #1c1427;
   background: #ccffbd;
-  font-size: 2.4rem;
+  font-size: 2.2rem;
   transition: transform 0.3s ease-out;
 }
 
@@ -239,7 +239,7 @@ nav {
 footer {
   color: #1c1427;
   display: flex;
-  justify-content: space-evenly;
+  text-align: center;
   padding: 3rem;
   background: #ccffbd;
 }
